  and ".ll" inside a paragraph, although the line breaking decisions
  may be suboptimal in this case.
* [nt]roff: The ".hypp" request now accepts a third argument specifying
  a penalty for hyphenating the last word of a paragraph.
* [nt]roff: A memory allocation error that could occur with extensive
  use of output-line traps has been fixed.

Release 061106
* [nt]roff: Support for paragraph-based justification has been added,
  enabled with ".ad p". The "Justification in Heirloom Troff" document
  has been expanded to cover the new features.
* [nt]roff: The ".hylen" request has been introduced to control the
  minimum number of characters a word must contain in order to be subject
  to hyphenation. The default is 5 independent of whether the ".hylang"
  request is active (in that case, it previously had been 4).
* [nt]roff: The ".pshape" request has been introduced to control the shape
  of a paragraph in ".ad p" mode.
* [nt]roff: The ".hypp" request has been introduced to control penalties
  of hyphenation points in ".ad p" mode.
* [nt]roff: The ".padj" request has been added; it enables ".ad p" mode
  globally in all environments. It is most useful to enable paragraph-at-
  once adjustment in existing documents.
* [nt]roff: The "\j" escape sequence has been introduced to specify custom
  penalties for line breaks in ".ad p" mode.
* troff: The ".char" request is now able to construct replacements for
  otherwise unknown locale-specific characters.
* troff: Fixed a typo in the hyphenation code that could result in the
  insertion of a large negative vertical motion in a word containing a
  character above Unicode point U+0800.
* troff: Fixed "\H" and "\S" to become effective if positioned directly
  after a font change (Bugreport by Dirk-Wilhelm Peters).
* [nt]roff: The ".pull" request (introduced in the previous release) has
  been removed again. It is recommended that the traditional approach to
  re-divert text is used instead.